...
            <Gap />
            <HR />
            <Gap />
          </View>
        ) : null}
        {massReading(styles, 'Lectura primera', mass.firstReading)}
        {continueWith(showPsalm, 'Continua amb el Salm', () => setShowPsalm(true))}
      </View>
    );
  }

  function psalm() {
    const nextShown = needSecondReading ? showSecondReading : showGospel;
...
