...
        <View>
          {this.introduccio(GlobalData.LT, GlobalData.setmana, this.LAUDES.salm94,
                              this.LAUDES.salm99, this.LAUDES.salm66, this.LAUDES.salm23)}
          {Platform.OS === 'android' ? <Text>{"\n"}</Text> : <Text />}
          <HR/>
          {Platform.OS === 'android' ? <Text>{"\n"}</Text> : <Text />}
          <Text selectable={true} style={this.styles.red}>{'HIMNE'}</Text>
          {Platform.OS === 'android' ? <Text>{"\n"}</Text> : <Text />}
          {this.himne(GlobalData.LT, GlobalData.date.getDay(), GlobalData.setmana)}
          {Platform.OS === 'android' ? <Text>{"\n"}</Text> : <Text />}
          <HR/>
          {Platform.OS === 'android' ? <Text>{"\n"}</Text> : <Text />}
          <Text selectable={true} style={this.styles.red}>{'SALMÒDIA'}</Text>
...
    );
  }

  introduccio(LT, setmana, salm94, salm99, salm66, salm23){
    const gloriaStringIntro = "Glòria al Pare i al Fill\ni a l’Esperit Sant.\nCom era al principi, ara i sempre\ni pels segles dels segles. Amén.";

    if(!this.LAUDES.diumPasqua && !this.state.invitatori){//this.LAUDES.invitatori !== "Laudes"){
      var aux_sigueu = 'Sigueu amb nosaltres, Déu nostre.';
      var aux_senyor_veniu = 'Senyor, veniu a ajudar-nos.';
      var aux_isAleluia = GlobalData.LT !== GLOBAL.Q_CENDRA && GlobalData.LT !== GLOBAL.Q_SETMANES && GlobalData.LT !== GLOBAL.Q_DIUM_RAMS && GlobalData.LT !== GLOBAL.Q_SET_SANTA && GlobalData.LT !== GLOBAL.Q_TRIDU;

      return(
        <View>
...
