export enum CelebrationType {
  Fair = '-',
  Solemnity = 'S',
  Festivity = 'F',
  Memory = 'M',
  OptionalMemory = 'L',
  OptionalVirginMemory = 'V',
}

export enum CelebrationSpecificClassification {
  Lord = 'SENYOR',
  MotherOfGod = 'MARE',
  Own = 'PROPIA',
  Generic = 'GENERICA',
  NoClassification = '-',
}

export enum DioceseCode {
  BaD = 'BaD',
  BaV = 'BaV',
  BaC = 'BaC',
  GiD = 'GiD',
  GiV = 'GiV',
  GiC = 'GiC',
  LlD = 'LlD',
  LlV = 'LlV',
  LlC = 'LlC',
  SFD = 'SFD',
  SFV = 'SFV',
  SFC = 'SFC',
  SoD = 'SoD',
  SoV = 'SoV',
  SoC = 'SoC',
  TaD = 'TaD',
  TaV = 'TaV',
  TaC = 'TaC',
  TeD = 'TeD',
  TeV = 'TeV',
  TeC = 'TeC',
  ToD = 'ToD',
  ToV = 'ToV',
  ToC = 'ToC',
  UrD = 'UrD',
  UrV = 'UrV',
  UrC = 'UrC',
  ViD = 'ViD',
  ViV = 'ViV',
  ViC = 'ViC',
  Andorra = 'Andorra',
  MaD = 'MaD',
  MaV = 'MaV',
  MaC = 'MaC',
  MeD = 'MeD',
  MeV = 'MeV',
  MeC = 'MeC',
}

export enum YearType {
  A = 'A',
  B = 'B',
  C = 'C',
}
